tests/NormalTests/paczka1/small_fuzzy/27533803.err
Error in line 3: d8e422 S257 73,4
Error in line 8: FjjN S146 86,4
